fixed navbar and whitespaces for all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,6 +279,7 @@ h1 {
 .navbar {
   padding: 0;
   background-color: transparent;
+  display: contents;
 }
 
 .navbar li {
@@ -361,16 +362,16 @@ h1 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: var(--background-black-lv1);
   font-size: 28px;
   cursor: pointer;
   display: none;
   line-height: 0;
-  transition: 0.5s;
 }
 
 .mobile-nav-toggle.bi-x {
   color: var(--background-white);
+  margin-right: 10px;
+
 }
 
 @media (max-width: 991px) {
@@ -406,18 +407,17 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 340px;
-  right: 70px;
-  width: 200px;
-  /* left: 2rem;  */
+  position: fixed;
+  row-gap: 20px;
+  top: 490px;
+  right: 0;
+  width: 250px;
   transform: translateY(-135%);
   padding: 10px 0;
   background-color: var(--background-white);
   overflow-y: auto;
   transition: 0.3s;
   border-radius: 8px;
-  max-height: calc(100vh - 70px);
   -webkit-transform: translateY(-135%);
   -moz-transform: translateY(-135%);
   -ms-transform: translateY(-135%);
